[package]
name = "raphdb"
version = "0.1.0"
authors = ["Raphael <dskart11@gmail.com>"]
edition = "2018"


[dependencies]
async-stream = "0.3.0"
slog = "2.5.2"
slog-term = "2.6.0"
slog-async = "2.5.0"
clap = "2.33.1"
simple-error = "0.2.1"
termios = "0.3.3"
slog-json = "2.3.0"
tokio = { version = "1.13.0", features = ["full"] }
tokio-stream = "0.1"
tokio-util = "0.6.7"
bytes = "1"
atoi = "0.4.0"

